--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -22,6 +22,8 @@
 	gap: 15px;
 	margin-left: 15px;
 	font-size: larger;
+	font-family: "ALSGorizont", Golos, sans-serif;
+	font-weight: bold;
 }
 
 .logoContainer > img {
