--- a/src/Components/ProjectPage/ProjectPage.module.css
+++ b/src/Components/ProjectPage/ProjectPage.module.css
@@ -20,3 +20,9 @@
 	justify-content: flex-end;
 	margin-top: 15px;
 }
+
+.centeredSpin {
+	display: flex;
+	justify-content: center;
+	margin-block: 50px;
+}
